--- a/1.Scraping_online_news.ipynb
+++ b/1.Scraping_online_news.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bc8954ca",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "46b6ac67",
    "metadata": {},
    "outputs": [
@@ -351,14 +351,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:57<00:00, 11.78s/it]\n"
+      "100%|██████████| 100/100 [23:03<00:00, 13.84s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Selesai. Total berita: 100\n"
+      "Selesai. Total berita: 1000\n"
      ]
     },
     {
@@ -418,72 +418,73 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>Penerima Manfaat Makan Bergizi Gratis hingga M...</td>\n",
-       "      <td>https://www.tempo.co/ekonomi/penerima-manfaat-...</td>\n",
+       "      <th>995</th>\n",
+       "      <td>KKP Beberkan Alasan Usulkan Ikan Kaleng jadi M...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/kkp-beberkan-alas...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>Peluncuran Dapur Satuan Pelayanan Pemenuhan Gizi</td>\n",
-       "      <td>https://www.tempo.co/foto/arsip/peluncuran-dap...</td>\n",
+       "      <th>996</th>\n",
+       "      <td>Pemkot Palembang Anggarkan Rp 42 Miliar untuk ...</td>\n",
+       "      <td>https://www.tempo.co/politik/pemkot-palembang-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>Cari Sebab Penerimaan Pajak Anjlok: Salah Satu...</td>\n",
-       "      <td>https://www.tempo.co/ekonomi/cari-sebab-peneri...</td>\n",
+       "      <th>997</th>\n",
+       "      <td>Susu Ikan jadi Substitusi di Program Makan Ber...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/susu-ikan-jadi-su...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>Diskon Tarif Listrik Dinilai sebagai Kebijakan...</td>\n",
-       "      <td>https://www.tempo.co/ekonomi/diskon-tarif-list...</td>\n",
+       "      <th>998</th>\n",
+       "      <td>Anggaran Makan Bergizi Gratis Prabowo Dipatok ...</td>\n",
+       "      <td>https://www.tempo.co/ekonomi/anggaran-makan-be...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>Alasan Anindya Bakrie Kukuhkan Sebanyak 2.800 ...</td>\n",
-       "      <td>https://www.tempo.co/ekonomi/alasan-anindya-ba...</td>\n",
+       "      <th>999</th>\n",
+       "      <td>Pemprov Sulbar Gencar Sosialisasikan Makan Ber...</td>\n",
+       "      <td>https://www.tempo.co/info-tempo/pemprov-sulbar...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 2 columns</p>\n",
+       "<p>1000 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                judul  \\\n",
-       "0   Seknas Fitra: Makan Bergizi Gratis Belum Dongk...   \n",
-       "1   Hingga 21 Mei, Anggaran Makan Bergizi Gratis S...   \n",
-       "2   Korban Keracunan MBG Lebih Besar dari Klaim Pr...   \n",
-       "3   Sejumlah Titik Kritis dalam Program MBG, Menur...   \n",
-       "4   Bos BGN Membantah Raffi Ahmad Kelola 300 Dapur...   \n",
-       "..                                                ...   \n",
-       "95  Penerima Manfaat Makan Bergizi Gratis hingga M...   \n",
-       "96   Peluncuran Dapur Satuan Pelayanan Pemenuhan Gizi   \n",
-       "97  Cari Sebab Penerimaan Pajak Anjlok: Salah Satu...   \n",
-       "98  Diskon Tarif Listrik Dinilai sebagai Kebijakan...   \n",
-       "99  Alasan Anindya Bakrie Kukuhkan Sebanyak 2.800 ...   \n",
+       "                                                 judul  \\\n",
+       "0    Seknas Fitra: Makan Bergizi Gratis Belum Dongk...   \n",
+       "1    Hingga 21 Mei, Anggaran Makan Bergizi Gratis S...   \n",
+       "2    Korban Keracunan MBG Lebih Besar dari Klaim Pr...   \n",
+       "3    Sejumlah Titik Kritis dalam Program MBG, Menur...   \n",
+       "4    Bos BGN Membantah Raffi Ahmad Kelola 300 Dapur...   \n",
+       "..                                                 ...   \n",
+       "995  KKP Beberkan Alasan Usulkan Ikan Kaleng jadi M...   \n",
+       "996  Pemkot Palembang Anggarkan Rp 42 Miliar untuk ...   \n",
+       "997  Susu Ikan jadi Substitusi di Program Makan Ber...   \n",
+       "998  Anggaran Makan Bergizi Gratis Prabowo Dipatok ...   \n",
+       "999  Pemprov Sulbar Gencar Sosialisasikan Makan Ber...   \n",
        "\n",
-       "                                                 link  \n",
-       "0   https://www.tempo.co/ekonomi/seknas-fitra-maka...  \n",
-       "1   https://www.tempo.co/ekonomi/hingga-21-mei-ang...  \n",
-       "2   https://www.tempo.co/politik/korban-keracunan-...  \n",
-       "3   https://www.tempo.co/politik/sejumlah-titik-kr...  \n",
-       "4   https://www.tempo.co/ekonomi/bos-bgn-membantah...  \n",
-       "..                                                ...  \n",
-       "95  https://www.tempo.co/ekonomi/penerima-manfaat-...  \n",
-       "96  https://www.tempo.co/foto/arsip/peluncuran-dap...  \n",
-       "97  https://www.tempo.co/ekonomi/cari-sebab-peneri...  \n",
-       "98  https://www.tempo.co/ekonomi/diskon-tarif-list...  \n",
-       "99  https://www.tempo.co/ekonomi/alasan-anindya-ba...  \n",
+       "                                                  link  \n",
+       "0    https://www.tempo.co/ekonomi/seknas-fitra-maka...  \n",
+       "1    https://www.tempo.co/ekonomi/hingga-21-mei-ang...  \n",
+       "2    https://www.tempo.co/politik/korban-keracunan-...  \n",
+       "3    https://www.tempo.co/politik/sejumlah-titik-kr...  \n",
+       "4    https://www.tempo.co/ekonomi/bos-bgn-membantah...  \n",
+       "..                                                 ...  \n",
+       "995  https://www.tempo.co/ekonomi/kkp-beberkan-alas...  \n",
+       "996  https://www.tempo.co/politik/pemkot-palembang-...  \n",
+       "997  https://www.tempo.co/ekonomi/susu-ikan-jadi-su...  \n",
+       "998  https://www.tempo.co/ekonomi/anggaran-makan-be...  \n",
+       "999  https://www.tempo.co/info-tempo/pemprov-sulbar...  \n",
        "\n",
-       "[100 rows x 2 columns]"
+       "[1000 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scrape_tempo_search_selenium(\"makan bergizi gratis\", 10)"
+    "#max pages yang bisa diakses publik hanya 100 pages untuk tiap keyword (pengecekan manual)\n",
+    "scrape_tempo_search_selenium(\"makan bergizi gratis\", 100)"
    ]
   },
   {
@@ -496,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "3b16d691",
    "metadata": {},
    "outputs": [],
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "6de1ea70",
    "metadata": {},
    "outputs": [
@@ -538,7 +539,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [02:37<00:00,  1.57s/it]"
+      "100%|██████████| 1000/1000 [29:21<00:00,  1.76s/it]\n"
      ]
     },
     {
@@ -546,13 +547,6 @@
      "output_type": "stream",
      "text": [
       "Selesai menyimpan semua artikel.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     },
     {
@@ -670,7 +664,7 @@
        "4   Bisnis  https://www.tempo.co/ekonomi/bos-bgn-membantah...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,6 +672,37 @@
    "source": [
     "df = scrape_tempo_dari_csv(\"./files/tempo_links.csv\")\n",
     "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f12f4bb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   judul      1000 non-null   object\n",
+      " 1   sub_judul  918 non-null    object\n",
+      " 2   isi        920 non-null    object\n",
+      " 3   tanggal    1000 non-null   object\n",
+      " 4   jam        1000 non-null   object\n",
+      " 5   kategori   983 non-null    object\n",
+      " 6   link       1000 non-null   object\n",
+      "dtypes: object(7)\n",
+      "memory usage: 54.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
